[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/tela deck/Tela Deck.gd" type="Script" id=3]
[ext_resource path="res://scenes/adicionais tela deck/ActionButtonCarta.tscn" type="PackedScene" id=4]

[node name="Tela Deck" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Cards" type="Node2D" parent="." groups=["Cartas"]]
position = Vector2( 5, -40 )

[node name="Card" parent="Cards" instance=ExtResource( 2 )]
position = Vector2( 560, 345 )

[node name="Card2" parent="Cards" instance=ExtResource( 2 )]
position = Vector2( 900, 345 )

[node name="Card3" parent="Cards" instance=ExtResource( 2 )]
position = Vector2( 1240, 345 )

[node name="Card4" parent="Cards" instance=ExtResource( 2 )]
position = Vector2( 560, 850 )

[node name="Card5" parent="Cards" instance=ExtResource( 2 )]
position = Vector2( 900, 850 )

[node name="Card6" parent="Cards" instance=ExtResource( 2 )]
position = Vector2( 1240, 850 )

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 1686.0
margin_top = 4.0
margin_right = 1917.0
margin_bottom = 886.0
custom_constants/separation = 21

[node name="ActionButtonCarta" parent="Container" instance=ExtResource( 4 )]

[node name="ButtonNext" type="Button" parent="."]
margin_left = 1522.0
margin_top = 978.0
margin_right = 1562.0
margin_bottom = 998.0
text = "proximo"

[node name="ButtonPrevious" type="Button" parent="."]
margin_left = 1452.0
margin_top = 976.0
margin_right = 1492.0
margin_bottom = 996.0
text = "voltar"

[connection signal="pressed" from="ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="ButtonPrevious" to="." method="_on_ButtonPrevious_pressed"]
